Changes to css files to make a one-dark theme

--- a/src/application/menus.css
+++ b/src/application/menus.css
@@ -33,6 +33,7 @@
 
 
 .p-MenuBar-item {
+  color: white;
   padding: 0px 8px;
   border-left: var(--jp-border-width) solid transparent;
   border-right: var(--jp-border-width) solid transparent;
