--- a/src/default-theme/variables.css
+++ b/src/default-theme/variables.css
@@ -55,20 +55,22 @@ all of MD as it is not optimized for dense, information rich UIs.
      In a light theme, these go from dark to light.
   */
 
-  /*--jp-ui-font-color0: rgba(0,0,0,1.0);
+  /*
+  --jp-ui-font-color0: rgba(0,0,0,1.0);
   --jp-ui-font-color1: rgba(0,0,0,0.87);
   --jp-ui-font-color2: rgba(0,0,0,0.54);
   --jp-ui-font-color3: rgba(0,0,0,0.38);*/
 
-  /*--jp-ui-font-color0: white;
+  /*
+  --jp-ui-font-color0: white;
   --jp-ui-font-color1: rgb(157,157,157);
   --jp-ui-font-color2: var(--md-grey-700);
   --jp-ui-font-color3: var(--md-grey-500);*/
 
   --jp-ui-font-color0: white;
-  --jp-ui-font-color1: white;
-  --jp-ui-font-color2: white;
-  --jp-ui-font-color3: white;
+  --jp-ui-font-color1: rgb(157,157,157);
+  --jp-ui-font-color2: var(--md-grey-500);
+  --jp-ui-font-color3: var(--md-grey-700);
 
 
   /* Use these against the brand/accent/warn/error colors.
@@ -166,4 +168,5 @@ all of MD as it is not optimized for dense, information rich UIs.
   --jp-info-color2: var(--md-cyan-300);
   --jp-info-color3: var(--md-cyan-100);
 
+  --jp-fa-invert: 0;
 }
