--- a/src/default-theme/icons.css
+++ b/src/default-theme/icons.css
@@ -19,67 +19,67 @@ svg {
 
 
 .jp-AddIcon {
-  -webkit-filter: invert( var(--jp-fa-invert) );
+  -webkit-filter: invert( var(--jp-fa-color-invert) );
   background-image: url(icons/md/add.svg);
 }
 
 
 .jp-CloseIcon {
-  -webkit-filter: invert( var(--jp-fa-invert) );
+  -webkit-filter: invert( var(--jp-fa-color-invert) );
   background-image: url(icons/md/close.svg);
 }
 
 
 .jp-CutIcon {
-  -webkit-filter: invert( var(--jp-fa-invert) );
+  -webkit-filter: invert( var(--jp-fa-color-invert) );
   background-image: url(icons/md/cut.svg);
 }
 
 
 .jp-CopyIcon {
-  -webkit-filter: invert( var(--jp-fa-invert) );
+  -webkit-filter: invert( var(--jp-fa-color-invert) );
   background-image: url(icons/md/copy.svg);
 }
 
 
 .jp-DownCaretIcon {
-  -webkit-filter: invert( var(--jp-fa-invert) );
+  -webkit-filter: invert( var(--jp-fa-color-invert) );
   background-image: url(icons/md/down_caret.svg);
 }
 
 
 .jp-DownloadIcon {
-  -webkit-filter: invert( var(--jp-fa-invert) );
+  -webkit-filter: invert( var(--jp-fa-color-invert) );
   background-image: url(icons/md/download.svg);
 }
 
 
 .jp-EditIcon {
-  -webkit-filter: invert( var(--jp-fa-invert) );
+  -webkit-filter: invert( var(--jp-fa-color-invert) );
   background-image: url(icons/md/edit.svg);
 }
 
 
 .jp-EllipsesIcon {
-  -webkit-filter: invert( var(--jp-fa-invert) );
+  -webkit-filter: invert( var(--jp-fa-color-invert) );
   background-image: url(icons/md/ellipses.svg);
 }
 
 
 .jp-FileIcon {
-  -webkit-filter: invert( var(--jp-fa-invert) );
+  -webkit-filter: invert( var(--jp-fa-color-invert) );
   background-image: url(icons/md/file.svg);
 }
 
 
 .jp-FolderIcon {
-  -webkit-filter: invert( var(--jp-fa-invert) );
+  -webkit-filter: invert( var(--jp-fa-color-invert) );
   background-image: url(icons/md/landingfolder.svg);
 }
 
 
 .jp-HomeIcon {
-  -webkit-filter: invert( var(--jp-fa-invert) );
+  -webkit-filter: invert( var(--jp-fa-color-invert) );
   background-image: url(icons/md/home.svg);
   min-width: 14px;
   min-height: 14px;
@@ -89,7 +89,7 @@ svg {
 
 
 .jp-JupyterIcon {
-  -webkit-filter: invert( var(--jp-fa-invert) );
+  /*-webkit-filter: invert( var(--jp-fa-color-invert) );*/
   background-image: url(icons/jupyter/jupyter.svg);
   background-size: 16px;
   margin: 2px;
@@ -115,49 +115,48 @@ svg {
 
 
 .jp-NotebookIcon {
-  -webkit-filter: invert( var(--jp-fa-invert) );
+  -webkit-filter: invert( var(--jp-fa-color-invert) );
   background-image: url(icons/md/book.svg);
 }
 
 
 .jp-OpenFolderIcon {
-  -webkit-filter: invert( var(--jp-fa-invert) );
+  -webkit-filter: invert( var(--jp-fa-color-invert) );
   background-image: url(icons/md/directory.svg);
 }
 
 
 .jp-PasteIcon {
-  -webkit-filter: invert( var(--jp-fa-invert) );
+  -webkit-filter: invert( var(--jp-fa-color-invert) );
   background-image: url(icons/md/paste.svg);
 }
 
 
 .jp-RefreshIcon {
-  -webkit-filter: invert( var(--jp-fa-invert) );
+  -webkit-filter: invert( var(--jp-fa-color-invert) );
   background-image: url(icons/md/refresh.svg);
 }
 
 
 .jp-RunIcon {
-  -webkit-filter: invert( var(--jp-fa-invert) );
+  -webkit-filter: invert( var(--jp-fa-color-invert) );
   background-image: url(icons/md/run.svg);
 }
 
 
 .jp-SaveIcon {
-  -webkit-filter: invert( var(--jp-fa-invert) );
+  -webkit-filter: invert( var(--jp-fa-color-invert) );
   background-image: url(icons/md/save.svg);
-  fill: #fff;
 }
 
 
 .jp-StopIcon {
-  -webkit-filter: invert( var(--jp-fa-invert) );
+  -webkit-filter: invert( var(--jp-fa-color-invert) );
   background-image: url(icons/md/stop.svg);
 }
 
 
 .jp-UploadIcon {
-  -webkit-filter: invert( var(--jp-fa-invert) );
+  -webkit-filter: invert( var(--jp-fa-color-invert) );
   background-image: url(icons/md/upload.svg);
 }
