--- a/src/default-theme/variables.css
+++ b/src/default-theme/variables.css
@@ -168,5 +168,5 @@ all of MD as it is not optimized for dense, information rich UIs.
   --jp-info-color2: var(--md-cyan-300);
   --jp-info-color3: var(--md-cyan-100);
 
-  --jp-fa-invert: 0;
+  --jp-fa-color-invert: .7;
 }
